<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tcc.admin.ticketbox3.com.tcc.admin.ticketbox.MainActivity">
    <item
        android:id="@+id/action_configuracoes_horarios"
        android:orderInCategory="100"
        android:title="@string/action_configuracoes_horarios"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_relatorio"
        android:orderInCategory="100"
        android:title="@string/action_relatorio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manual"
        android:orderInCategory="100"
        android:title="@string/action_manual"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="100"
        android:title="@string/action_sobre"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sair"
        android:orderInCategory="100"
        android:title="@string/action_sair"
        app:showAsAction="never" />
</menu>
